--- a/dev.env
+++ b/dev.env
@@ -1,4 +1,4 @@
-DATABASE_URL=""
+DATABASE_URL="postgresql://quickman_user:quickman_user@localhost:5432/quickman_dev?schema=public"
 FRONTEND_URL="http://localhost:7777"
 PRISMA_ENDPOINT=""
 PRISMA_SECRET=""
