--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
     "deploy": "prisma deploy --env-file variables.env"
   },
   "dependencies": {
+    "@prisma/client": "^2.13.1",
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "2.4.3",
-    "cookie-parser": "^1.4.3",
-    "dotenv": "6.0.0",
-    "graphql": "^0.13.2",
-    "graphql-cli": "^2.16.7",
-    "graphql-yoga": "1.16.2",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "graphql": "^15.4.0",
+    "graphql-cli": "^4.1.0",
+    "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "8.3.0",
-    "nodemailer": "^4.6.8",
-    "nodemon": "^1.18.7",
+    "nodemailer": "^4.7.0",
+    "nodemon": "^1.19.4",
     "npm-run-all": "^4.1.5",
-    "prisma": "1.17.1",
-    "prisma-binding": "2.1.6",
-    "stripe": "^6.12.1"
+    "stripe": "^6.36.0"
   },
   "license": "MIT",
   "repository": {
@@ -32,5 +31,8 @@
     "presets": [
       "env"
     ]
+  },
+  "devDependencies": {
+    "@prisma/cli": "^2.13.1"
   }
 }
