--- a/dev.env
+++ b/dev.env
@@ -1,6 +1,6 @@
 DATABASE_URL="postgresql://quickman_user:quickman_user@localhost:5432/quickman_dev?schema=public"
 FRONTEND_URL="http://localhost:7777"
-PRISMA_ENDPOINT=""
+PRISMA_ENDPOINT="http://localhost:5555"
 PRISMA_SECRET=""
 APP_SECRET=""
 STRIPE_SECRET=""
