--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "quickman server",
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/index.js",
-    "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
+    "debug": "nodemon -e js,graphql -x node --inspect src/index.js",
     "test": "jest",
-    "deploy": "prisma deploy --env-file variables.env"
+    "playground": "graphql playground --dotenv .env",
+    "studio": "prisma studio",
+    "dev": "npm-run-all --parallel debug playground"
   },
   "dependencies": {
     "@prisma/client": "^2.13.1",
